# Local_pw_manager

./: CMakeLists.txt  README.md
include/: PasswordManager.h
src/: Cyphertest  Cyphertest.cpp  PasswordManager.cpp  temp_file.txt
